# inno_intership_1_test_task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: api.py
bot/: main.py  messages.py  models.py  utils.py
swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
swagger_client/api/: __init__.py  api_api.py  auth_api.py  authentication_controller_api.py  barley_determinant_controller_api.py  barley_log_controller_api.py  barley_question_controller_api.py  basic_error_controller_api.py  carrot_determinant_controller_api.py  carrot_disease_controller_api.py  carrot_disease_file_controller_api.py  carrot_log_controller_api.py  carrot_question_controller_api.py  cereal_disease_controller_api.py  cereal_disease_file_controller_api.py  culture_controller_api.py  disease_controller_api.py  disease_file_controller_api.py  fed_calculator_controller_api.py  fertilizer_controller_api.py  fertilizer_type_controller_api.py  liquid_calculator_controller_api.py  pesticide_controller_api.py  potato_determinant_controller_api.py  potato_log_controller_api.py  potato_question_controller_api.py  region_controller_api.py  regulatory_calculator_controller_api.py  request_controller_api.py  review_controller_api.py  rye_determinant_controller_api.py  rye_log_controller_api.py  rye_question_controller_api.py  settlement_balance_calculator_controller_api.py  stand_by_controller_api.py  task_controller_api.py  task_file_controller_api.py  user_rest_controller_api.py  v1acidity_group_api.py  v1agrochemical_analysis_request_api.py  (+60 more)
(+332 files in other folders)
