[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Telegram bot for teleagronom project"
authors = ["Matvey Abramov <karapys.mor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.13"
aioredis = "^1.3.1"
python-decouple = "^3.4"
prettytable = "^2.1.0"
cachetools = "^4.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
